c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/extra_credit/decrement_fun_call.c
int x(void);

int main(void) {
    // a function call is not an lvalue, so we can't decrement it
    x()--;
}